--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
-    "cheerio": "^1.0.0-rc.2"
+    "bluebird": "^3.5.0",
+    "cheerio": "^1.0.0-rc.2",
+    "mongoose": "^4.11.10"
   }
 }
