--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "bluebird": "^3.5.0",
     "cheerio": "^1.0.0-rc.2",
-    "mongoose": "^4.11.10"
+    "mongoose": "^4.11.10",
+    "sleep": "^5.1.1"
   }
 }
