--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "bluebird": "^3.5.0",
     "cheerio": "^1.0.0-rc.2",
     "mongoose": "^4.11.10",
-    "sleep": "^5.1.1"
-  }
+    "request": "^2.82.0",
+    "request-promise": "^4.2.1"  }
 }
