--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "nodeapp",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-    "reptile": "node ./reptile/index.js"
-  },
-  "dependencies": {
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "jade": "~1.11.0",
-    "morgan": "~1.8.1",
-    "node-sass-middleware": "0.9.8",
-    "serve-favicon": "~2.4.2"
-  },
-  "devDependencies": {
-    "bluebird": "^3.5.0",
-    "cheerio": "^1.0.0-rc.2",
-    "mongoose": "^4.11.10",
-    "request": "^2.82.0",
-    "request-promise": "^4.2.1"
-  }
+    "name": "nodeapp",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www",
+        "promise": "node ./reptile/index-promise.js",
+        "async": "babel-node ./reptile/index-async.js"
+    },
+    "dependencies": {
+        "body-parser": "~1.17.1",
+        "cookie-parser": "~1.4.3",
+        "debug": "~2.6.3",
+        "express": "~4.15.2",
+        "jade": "~1.11.0",
+        "morgan": "~1.8.1",
+        "node-sass-middleware": "0.9.8",
+        "serve-favicon": "~2.4.2"
+    },
+    "devDependencies": {
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
+        "cheerio": "^1.0.0-rc.2",
+        "mongoose": "^4.11.10",
+        "bluebird": "^3.5.0",
+        "request": "^2.82.0",
+        "request-promise": "^4.2.1"
+    }
 }
